--- a/src/index.pug
+++ b/src/index.pug
@@ -4,11 +4,9 @@
         <title>ReactJs Basics</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="styles/style.css" rel="stylesheet">
     </head>
     <body>
-
-
-      <script src="/app/index.bundle.js"></script>
+    <h1>Rafay</h1>
     </body>
 </html>
