--- a/src/index.pug
+++ b/src/index.pug
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>ReactJs Basics</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-    <h1>Rafay</h1>
-    </body>
-</html>
+doctype html
+html(lang='en')
+  head
+    title ReactJs Basics
+    meta(charset='UTF-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+  body
+    #app
