--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -5,4 +5,4 @@ html(lang='en')
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
   body
-    #app
+    #root
