modularise pug files

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,8 +1,4 @@
-doctype html
-html(lang='en')
-  head
-    title ReactJs Basics
-    meta(charset='UTF-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
-  body
-    #root
+extends placeholders/header.pug
+
+block content
+  #root
