--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,11 @@
-body {
+canvas {
 	overflow: hidden;
 	margin: 0;
-	height: 100%;
+  height: 100%;
+  z-index: -10000;
+  position: fixed;
+}
+
+.header {
+  margin-top: 20%;
 }
