--- a/src/views/placeholders/header.pug
+++ b/src/views/placeholders/header.pug
@@ -3,7 +3,10 @@ html(lang='en')
   head
     title Rafay Tanzeel
     meta(charset='UTF-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
+    meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
+
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css', integrity='sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M', crossorigin='anonymous')
+
   body
     block content
     include ./footer.pug
