type animation added

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,7 +1,6 @@
 extends placeholders/header.pug
 
 block content
-  #root
   #canvasSea
 
   //- nav.navbar.navbar-dark.bg-dark
@@ -24,8 +23,7 @@ block content
   .container.fill
     .row.justify-content-center.align-items-center
       .col.text-center
-        h1.header
-          | Rafay Tanzeel
+        h1.header#root
 
 
 
