--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,7 +1,7 @@
 extends placeholders/header.pug
 
 block content
-  #canvasSea
+
 
   //- nav.navbar.navbar-dark.bg-dark
     //- a.navbar-brand(href='#') Navbar w/ text
@@ -19,12 +19,16 @@ block content
     //-       a.nav-link(href='#') Pricing
     //-   span.navbar-text
     //-     | Navbar text with an inline element
-
-  .container.fill
-    .row.justify-content-center.align-items-center
-      .col.text-center
-        h1.header#root
+  //- section#headerSection
 
 
 
-
+  #fullpage
+    .section
+      .header.text-center
+        h1#typer
+      #canvasSea
+    .section
+      | Some section
+    .section
+      | Some section
