--- a/src/views/placeholders/vert_shader.pug
+++ b/src/views/placeholders/vert_shader.pug
@@ -2,3 +2,10 @@ script#vertex-shader(type='no-js').
   void main()	{
   gl_Position = vec4( position, 1.0 );
   }
+
+script.
+  $(document).ready(function() {
+    $('#fullpage').fullpage({
+      sectionsColor: ['#f2aaa2', '#4BBFC3', '#ff22cc'],
+    });
+  });
