--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -27,7 +27,11 @@ block content
     .section
       .header.text-center
         h1#typer
+      .scrollDown
+        .arrow.arrow-1
+        .arrow.arrow-2
       #canvasSea
+
     .section
       | Some section
     .section
