--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -2,13 +2,14 @@ extends placeholders/header.pug
 
 block content
   #fullpage
-    .section#RenderAnim
-      .header.text-center
+    .section
+      canvas
+      .text-center.header
         h1#typer
+
       .scrollDown
         .arrow.arrow-1
         .arrow.arrow-2
-      #canvasSea
 
     .section
       | My is is Rafay
