--- a/src/views/placeholders/footer.pug
+++ b/src/views/placeholders/footer.pug
@@ -1,3 +1,5 @@
 
 include ./vert_shader.pug
 include ./frag_shader.pug
+script(src='https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.1/pixi.min.js')
+script(type='text/javascript', src='javascripts/render.js')
