speed up animation

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -2,7 +2,7 @@ extends placeholders/header.pug
 
 block content
   #fullpage
-    .section
+    .section#RenderAnim
       canvas
       .text-center.header
         h1#typer
