--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,8 +5,6 @@ canvas {
   min-height: 100%;
 }
 
-
-
 #typer{
   z-index: 10;
   font-size: 2rem;
@@ -20,6 +18,12 @@ canvas {
   width: 100%;
   z-index:9;
   bottom:0px;
+}
+
+nav{
+  position: absolute;
+  z-index: 100;
+  width: 100%;
 }
 
 .header{
