--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,36 +1,4 @@
 extends placeholders/header.pug
 
 block content
-  nav.navbar.navbar-dark.bg-dark
-    a.navbar-brand(href='#') Navbar w/ text
-    button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarText', aria-controls='navbarText', aria-expanded='false', aria-label='Toggle navigation')
-      span.navbar-toggler-icon
-    #navbarText.collapse.navbar-collapse
-      ul.navbar-nav.mr-auto
-        li.nav-item.active
-          a.nav-link(href='#')
-            | Home
-            span.sr-only (current)
-        li.nav-item
-          a.nav-link(href='#') Features
-        li.nav-item
-          a.nav-link(href='#') Pricing
-      span.navbar-text
-        | Navbar text with an inline element
-
-
-  #fullpage
-    .section#RenderAnim
-      canvas
-      .text-center.header
-        h1#typer
-      .scrollDown
-        .arrow.arrow-1
-        .arrow.arrow-2
-
-    .section
-      | My is is Rafay
-
-
-    .section
-      | My is is Zoya
+  #typer
